--- a/app/src/main/res/layout/frg_default_store.xml
+++ b/app/src/main/res/layout/frg_default_store.xml
@@ -4,42 +4,92 @@
     xmlns:tools="http://schemas.android.com/tools">
     <data>
         <variable name="isLoading" type="boolean" />
-        <variable
-            name="store"
-            type="com.xereon.xereon.data.model.Store" />
+        <variable name="isSuccessful" type="boolean" />
     </data>
 
-    <androidx.coordinatorlayout.widget.CoordinatorLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/white"
         tools:context=".ui.stores.DefaultStore">
 
-        <!--com.google.android.material.appbar.AppBarLayout
-            android:layout_width="match_parent"
+        <ImageView
+            android:id="@+id/store_not_found_img"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@color/white"
-            android:elevation="10dp">
+            android:src="@drawable/img_undraw_blank_canvas"
+            app:show="@{!isSuccessful}"
+            app:show2="@{!isLoading}"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintVertical_bias="0.4"/>
 
-            <androidx.appcompat.widget.Toolbar
-                android:id="@+id/store_toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:theme="?attr/actionBarTheme"
-                app:navigationIcon="@drawable/ic_arrow_back"
-                app:menu="@menu/menu_search"
-                tools:title="Elektroland Heilbronn GmBH \amp; Co. KG."
-                app:title="@{store.name}" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="Filiale nicht gefunden"
+            android:textColor="@color/error"
+            android:fontFamily="@font/roboto_bold"
+            android:textSize="18sp"
+            app:show="@{!isSuccessful}"
+            app:show2="@{!isLoading}"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/store_not_found_img"/>
+        <TextView
+            android:id="@+id/store_not_found_descr"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="44dp"
+            android:textColor="@color/text_gray"
+            android:fontFamily="@font/roboto"
+            android:textSize="14sp"
+            app:show="@{!isSuccessful}"
+            app:show2="@{!isLoading}"
+            android:textAlignment="center"
+            android:text="Überprüfen Sie Ihre Verbindung. Diese Filiale kann auch vom Betreiber entfernt worden sein."
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintWidth_max="310dp"
+            app:layout_constraintTop_toBottomOf="@id/store_not_found_img"/>
 
-        </com.google.android.material.appbar.AppBarLayout-->
+        <Button
+            android:id="@+id/store_not_found_retry"
+            android:layout_width="130dp"
+            android:layout_height="43dp"
+            android:layout_marginTop="20dp"
+            android:textAllCaps="false"
+            android:textSize="16sp"
+            android:textColor="@color/white"
+            android:background="@drawable/button"
+            app:show="@{!isSuccessful}"
+            app:show2="@{!isLoading}"
+            android:text="Wiederholen"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/store_not_found_descr"/>
 
         <ProgressBar
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
             app:isVisible="@{isLoading}"
-            android:indeterminateTint="@color/primary"/>
+            android:indeterminateTint="@color/primary"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
-        <androidx.core.widget.NestedScrollView
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/store_recycler"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:show="@{!isLoading}"
+            app:show2="@{isSuccessful}"/>
+
+        <!--androidx.core.widget.NestedScrollView
             android:id="@+id/store_scroll_parent"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -235,7 +285,6 @@
                     android:ellipsize="end"
                     android:maxLines="8"
                     android:minLines="2"
-                    tools:text="-----"
                     android:text="@{store.description}"
                     android:textColor="@color/text_gray"
                     android:fontFamily="@font/roboto"
@@ -515,7 +564,7 @@
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
-        </androidx.core.widget.NestedScrollView>
-    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+        </androidx.core.widget.NestedScrollView-->
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
