--- a/app/src/main/res/layout/incl_opening_hours.xml
+++ b/app/src/main/res/layout/incl_opening_hours.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TableLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:stretchColumns="*">
@@ -8,182 +7,186 @@
     <TableRow
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/gray_1"
         android:paddingStart="8dp"
         android:paddingEnd="8dp">
+
         <TextView
             android:id="@+id/store_opening_monday"
-            android:textAlignment="textStart"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Montag"
+            android:textAlignment="textStart"
             android:textColor="@color/text_gray"
-            android:textSize="14sp"/>
+            android:textSize="14sp" />
 
         <TextView
-            android:layout_marginEnd="16dp"
             android:id="@+id/store_opening_monday_time"
-            android:textAlignment="textEnd"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:textAlignment="textEnd"
             android:textColor="@color/text_gray"
-            android:textSize="13sp"/>
+            android:textSize="13sp" />
     </TableRow>
 
     <TableRow
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/gray_0"
         android:paddingStart="8dp"
-        android:paddingEnd="8dp"
-        android:paddingTop="5dp">
+        android:paddingTop="5dp"
+        android:paddingEnd="8dp">
+
         <TextView
             android:id="@+id/store_opening_tuesday"
-            android:textAlignment="textStart"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Dienstag"
+            android:textAlignment="textStart"
             android:textColor="@color/text_gray"
-            android:textSize="14sp"/>
+            android:textSize="14sp" />
 
         <TextView
-            android:layout_marginEnd="16dp"
             android:id="@+id/store_opening_tuesday_time"
-            android:textAlignment="textEnd"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:textAlignment="textEnd"
             android:textColor="@color/text_gray"
-            android:textSize="13sp"/>
+            android:textSize="13sp" />
 
     </TableRow>
 
     <TableRow
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/gray_1"
         android:paddingStart="8dp"
-        android:paddingEnd="8dp"
-        android:paddingTop="5dp">
+        android:paddingTop="5dp"
+        android:paddingEnd="8dp">
+
         <TextView
             android:id="@+id/store_opening_wednesday"
-            android:textAlignment="textStart"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Mittwoch"
+            android:textAlignment="textStart"
             android:textColor="@color/text_gray"
-            android:textSize="14sp"/>
+            android:textSize="14sp" />
 
         <TextView
-            android:layout_marginEnd="16dp"
             android:id="@+id/store_opening_wednesday_time"
-            android:textAlignment="textEnd"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:textAlignment="textEnd"
             android:textColor="@color/text_gray"
-            android:textSize="13sp"/>
+            android:textSize="13sp" />
     </TableRow>
 
     <TableRow
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/gray_0"
         android:paddingStart="8dp"
-        android:paddingEnd="8dp"
-        android:paddingTop="5dp">
+        android:paddingTop="5dp"
+        android:paddingEnd="8dp">
 
         <TextView
             android:id="@+id/store_opening_thursday"
-            android:textAlignment="textStart"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Donnerstag"
+            android:textAlignment="textStart"
             android:textColor="@color/text_gray"
-            android:textSize="14sp"/>
+            android:textSize="14sp" />
 
         <TextView
-            android:layout_marginEnd="16dp"
             android:id="@+id/store_opening_thursday_time"
-            android:textAlignment="textEnd"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:textAlignment="textEnd"
             android:textColor="@color/text_gray"
-            android:textSize="13sp"/>
+            android:textSize="13sp" />
     </TableRow>
 
     <TableRow
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/gray_1"
         android:paddingStart="8dp"
-        android:paddingEnd="8dp"
-        android:paddingTop="5dp">
+        android:paddingTop="5dp"
+        android:paddingEnd="8dp">
 
         <TextView
             android:id="@+id/store_opening_friday"
-            android:textAlignment="textStart"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Freitag"
+            android:textAlignment="textStart"
             android:textColor="@color/text_gray"
-            android:textSize="14sp"/>
+            android:textSize="14sp" />
 
         <TextView
-            android:layout_marginEnd="16dp"
             android:id="@+id/store_opening_friday_time"
-            android:textAlignment="textEnd"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:textAlignment="textEnd"
             android:textColor="@color/text_gray"
-            android:textSize="13sp"/>
+            android:textSize="13sp" />
     </TableRow>
 
     <TableRow
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/gray_0"
         android:paddingStart="8dp"
-        android:paddingEnd="8dp"
-        android:paddingTop="5dp">
+        android:paddingTop="5dp"
+        android:paddingEnd="8dp">
 
         <TextView
             android:id="@+id/store_opening_saturday"
-            android:textAlignment="textStart"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Samstag"
+            android:textAlignment="textStart"
             android:textColor="@color/text_gray"
-            android:textSize="14sp"/>
+            android:textSize="14sp" />
 
         <TextView
-            android:layout_marginEnd="16dp"
             android:id="@+id/store_opening_saturday_time"
-            android:textAlignment="textEnd"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:textAlignment="textEnd"
             android:textColor="@color/text_gray"
-            android:textSize="13sp"/>
+            android:textSize="13sp" />
     </TableRow>
 
     <TableRow
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="5dp"
+        android:background="@color/gray_1"
         android:paddingStart="8dp"
+        android:paddingTop="5dp"
         android:paddingEnd="8dp">
 
         <TextView
             android:id="@+id/store_opening_sunday"
-            android:textAlignment="textStart"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Sonntag"
+            android:textAlignment="textStart"
             android:textColor="@color/text_gray"
-            android:textSize="14sp"/>
+            android:textSize="14sp" />
 
         <TextView
-            android:layout_marginEnd="16dp"
             android:id="@+id/store_opening_sunday_time"
-            android:textAlignment="textEnd"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:textAlignment="textEnd"
             android:textColor="@color/text_gray"
-            android:textSize="13sp"/>
+            android:textSize="13sp" />
     </TableRow>
 </TableLayout>
