--- a/app/src/main/res/layout/incl_store_recycler.xml
+++ b/app/src/main/res/layout/incl_store_recycler.xml
@@ -1,6 +1,433 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <data>
+        <variable
+            name="store"
+            type="com.xereon.xereon.data.model.Store" />
+    </data>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        tools:background="@color/white">
+
+        <ImageView
+            android:id="@+id/store_header_img"
+            android:layout_width="match_parent"
+            android:layout_height="165dp"
+            android:background="@color/gray_2"
+            android:fitsSystemWindows="true"
+            android:scaleType="centerCrop"
+            app:imageURL="@{store.officeImageURL}"
+            app:layout_collapseParallaxMultiplier="1"
+            app:layout_constraintTop_toTopOf="parent"/>
+
+        <RelativeLayout
+            android:id="@+id/store_type_color"
+            android:layout_width="match_parent"
+            android:layout_height="16dp"
+            android:background="@color/type_red"
+            app:backgroundColor="@{store.category}"
+            app:layout_constraintTop_toBottomOf="@id/store_header_img"
+            app:layout_constraintStart_toStartOf="parent">
+
+            <TextView
+                android:id="@+id/store_type_text"
+                android:layout_width="220dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="24dp"
+                android:text="@{store.type}"
+                tools:text="Elektronik"
+                android:fontFamily="@font/roboto_medium"
+                android:textSize="12sp"
+                android:lines="1"
+                android:ellipsize="end"
+                android:textColor="@color/white"/>
+        </RelativeLayout>
+
+        <TextView
+            android:id="@+id/store_name"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:text="@{store.name}"
+            tools:text="Elektroland Heilbronn GmBH &amp; Co. KG."
+            android:layout_marginTop="16dp"
+            android:layout_marginStart="16dp"
+            android:textSize="22sp"
+            android:fontFamily="@font/roboto_bold"
+            android:textColor="@color/black"
+            android:maxLines="3"
+            android:ellipsize="end"
+            app:layout_constraintTop_toBottomOf="@id/store_type_color"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/store_logo"/>
+
+        <LinearLayout
+            android:id="@+id/store_rating_container"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="6dp"
+            app:layout_constraintTop_toBottomOf="@id/store_name"
+            app:layout_constraintStart_toStartOf="parent">
+
+            <RatingBar
+                style="@style/Base.Widget.AppCompat.RatingBar.Small"
+                android:id="@+id/store_rating_bar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:numStars="5"
+                android:rating="4" />
+
+            <TextView
+                android:id="@+id/store_rating_percentage"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tools:text="4.56"
+                android:layout_marginStart="8dp"/>
+
+            <TextView
+                android:id="@+id/store_rating_count"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tools:text="(144)"
+                android:layout_marginStart="8dp" />
+
+        </LinearLayout>
+
+        <ImageView
+            android:id="@+id/store_logo"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_marginEnd="16dp"
+            tools:src="@drawable/img_map"
+            app:imageURL="@{store.logoImageURL}"
+            app:layout_constraintTop_toBottomOf="@id/store_type_color"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/store_address"/>
+
+        <TextView
+            android:id="@+id/store_address"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginTop="24dp"
+            android:textSize="12sp"
+            android:lines="1"
+            android:ellipsize="end"
+            tools:text="Lange Starße 8, 89542 Herbrechtingen"
+            android:textColor="@color/text_gray"
+            android:fontFamily="@font/roboto"
+            android:text="@{store.completeAddress}"
+            app:drawableStartCompat="@drawable/ic_location"
+            android:drawablePadding="16dp"
+            app:layout_constraintTop_toBottomOf="@id/store_rating_container"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+        <TextView
+            android:id="@+id/store_phone_number"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginEnd="16dp"
+            android:textSize="12sp"
+            android:lines="1"
+            android:ellipsize="end"
+            android:text="@{store.phone}"
+            tools:text="+49 171 894641"
+            android:textColor="@color/text_gray"
+            android:fontFamily="@font/roboto"
+            app:drawableStartCompat="@drawable/ic_phone"
+            android:drawablePadding="16dp"
+            app:layout_constraintTop_toBottomOf="@id/store_address"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+        <TextView
+            android:id="@+id/store_web"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginEnd="16dp"
+            android:textSize="12sp"
+            android:ellipsize="end"
+            android:lines="1"
+            app:websiteText="@{store.website}"
+            tools:text="metzgereiheussler.de"
+            android:textColor="@color/text_gray"
+            android:fontFamily="@font/roboto"
+            app:drawableStartCompat="@drawable/ic_globe"
+            android:drawablePadding="16dp"
+            app:layout_constraintTop_toBottomOf="@id/store_phone_number"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+        <LinearLayout
+            android:id="@+id/store_shortcut_container"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
+            android:orientation="horizontal"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/store_web">
+
+            <ImageView
+                android:id="@+id/store_save_favorite"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="8dp"
+                android:background="@drawable/bg_round"
+                android:backgroundTint="@color/primary"
+                android:src="@drawable/ic_favorite"
+                app:tint="@color/white"/>
+
+            <ImageView
+                android:id="@+id/store_search"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="8dp"
+                android:layout_marginStart="24dp"
+                android:background="@drawable/bg_round"
+                android:backgroundTint="@color/primary"
+                android:src="@drawable/ic_search"
+                app:tint="@color/white"/>
+
+            <ImageView
+                android:id="@+id/store_navigate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="8dp"
+                android:layout_marginStart="24dp"
+                android:background="@drawable/bg_round"
+                android:backgroundTint="@color/primary"
+                android:src="@drawable/ic_navigation"
+                app:tint="@color/white"/>
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="8dp"
+                android:layout_marginStart="24dp"
+                android:background="@drawable/bg_round"
+                android:backgroundTint="@color/primary"
+                android:src="@drawable/ic_chat"
+                app:tint="@color/white"/>
+
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/store_description_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginTop="32dp"
+            android:text="Beschreibung"
+            android:textSize="18sp"
+            android:textColor="@color/black"
+            android:fontFamily="@font/roboto_bold"
+            android:maxLines="3"
+            app:layout_constraintTop_toBottomOf="@id/store_shortcut_container"
+            app:layout_constraintStart_toStartOf="parent"/>
+
+        <TextView
+            android:id="@+id/store_description"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginEnd="16dp"
+            android:textSize="13sp"
+            android:ellipsize="end"
+            android:maxLines="8"
+            tools:text="-----"
+            android:text="@{store.description}"
+            android:textColor="@color/text_gray"
+            android:fontFamily="@font/roboto"
+            app:layout_constraintTop_toBottomOf="@id/store_description_title"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+        <TextView
+            android:id="@+id/store_opening_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginTop="32dp"
+            android:text="Öffnungszeiten"
+            android:textSize="18sp"
+            android:textColor="@color/black"
+            android:fontFamily="@font/roboto_bold"
+            android:maxLines="3"
+            app:layout_constraintTop_toBottomOf="@id/store_description"
+            app:layout_constraintStart_toStartOf="parent"/>
+
+        <include
+            android:id="@+id/store_opening_hours"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_marginTop="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            layout="@layout/incl_opening_hours"
+            app:layout_constraintTop_toBottomOf="@id/store_opening_title" />
+
+        <TextView
+            android:id="@+id/store_peak_times_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginTop="32dp"
+            android:text="Stoßzeiten"
+            android:textSize="18sp"
+            android:textColor="@color/black"
+            android:fontFamily="@font/roboto_bold"
+            android:maxLines="3"
+            app:layout_constraintTop_toBottomOf="@id/store_opening_hours"
+            app:layout_constraintStart_toStartOf="parent"/>
+
+        <ImageView
+            android:id="@+id/store_peak_times_prev"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_arrow_left"
+            android:layout_marginStart="8dp"
+            android:padding="10dp"
+            app:layout_constraintHorizontal_chainStyle="spread_inside"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@id/store_peak_chart"
+            app:layout_constraintBottom_toBottomOf="@id/store_peak_chart"
+            app:layout_constraintEnd_toStartOf="@id/store_peak_chart" />
+
+        <View
+            android:id="@+id/store_peak_chart"
+            android:layout_width="0dp"
+            android:layout_height="90dp"
+            android:layout_marginTop="8dp"
+            android:background="@color/gray_2"
+            app:layout_constraintTop_toBottomOf="@id/store_peak_times_title"
+            app:layout_constraintStart_toEndOf="@id/store_peak_times_prev"
+            app:layout_constraintEnd_toStartOf="@id/store_peak_times_next"
+            app:layout_constraintWidth_max="330dp"/>
+
+        <ImageView
+            android:id="@+id/store_peak_times_next"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_arrow_right"
+            android:padding="10dp"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/store_peak_chart"
+            app:layout_constraintBottom_toBottomOf="@id/store_peak_chart"
+            app:layout_constraintStart_toEndOf="@id/store_peak_chart" />
+
+        <TextView
+            android:id="@+id/store_peak_time_1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:text="3:00"
+            android:textSize="11sp"
+            app:layout_constraintEnd_toStartOf="@+id/store_peak_time_2"
+            app:layout_constraintStart_toStartOf="@id/store_peak_chart"
+            app:layout_constraintTop_toBottomOf="@id/store_peak_chart" />
+
+        <TextView
+            android:id="@+id/store_peak_time_2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:text="6:00"
+            android:textSize="11sp"
+            app:layout_constraintEnd_toStartOf="@+id/store_peak_time_3"
+            app:layout_constraintStart_toEndOf="@+id/store_peak_time_1"
+            app:layout_constraintTop_toBottomOf="@id/store_peak_chart" />
+
+        <TextView
+            android:id="@+id/store_peak_time_3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:text="9:00"
+            android:textSize="11sp"
+            app:layout_constraintEnd_toStartOf="@+id/store_peak_time_4"
+            app:layout_constraintStart_toEndOf="@+id/store_peak_time_2"
+            app:layout_constraintTop_toBottomOf="@id/store_peak_chart" />
+
+        <TextView
+            android:id="@+id/store_peak_time_4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:text="12:00"
+            android:textSize="11sp"
+            app:layout_constraintEnd_toStartOf="@+id/store_peak_time_5"
+            app:layout_constraintStart_toEndOf="@+id/store_peak_time_3"
+            app:layout_constraintTop_toBottomOf="@id/store_peak_chart" />
+
+        <TextView
+            android:id="@+id/store_peak_time_5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:text="15:00"
+            android:textSize="11sp"
+            app:layout_constraintEnd_toStartOf="@+id/store_peak_time_6"
+            app:layout_constraintStart_toEndOf="@+id/store_peak_time_4"
+            app:layout_constraintTop_toBottomOf="@id/store_peak_chart" />
+
+        <TextView
+            android:id="@+id/store_peak_time_6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:text="18:00"
+            android:textSize="11sp"
+            app:layout_constraintEnd_toStartOf="@+id/store_peak_time_7"
+            app:layout_constraintStart_toEndOf="@+id/store_peak_time_5"
+            app:layout_constraintTop_toBottomOf="@id/store_peak_chart" />
+
+        <TextView
+            android:id="@+id/store_peak_time_7"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:text="21:00"
+            android:textSize="11sp"
+            app:layout_constraintEnd_toEndOf="@id/store_peak_chart"
+            app:layout_constraintStart_toEndOf="@+id/store_peak_time_6"
+            app:layout_constraintTop_toBottomOf="@id/store_peak_chart" />
+
+        <TextView
+            android:id="@+id/store_peak_time_current_day"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="26dp"
+            android:layout_marginBottom="16dp"
+            android:textSize="13sp"
+            android:text="Montag"
+            android:textColor="@color/black"
+            android:fontFamily="@font/roboto_medium"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/store_peak_chart"
+            app:layout_constraintBottom_toBottomOf="parent"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
