--- a/app/src/main/res/layout/recycler_product_vertical.xml
+++ b/app/src/main/res/layout/recycler_product_vertical.xml
@@ -86,7 +86,8 @@
                 android:layout_marginStart="16dp"
                 android:lines="1"
                 tools:text="5.00 € / Stück"
-                android:text="@{product.price}"
+                app:price="@{product.price}"
+                app:unit="@{product.unit}"
                 android:textSize="12sp"
                 android:fontFamily="@font/roboto_bold"
                 android:textColor="@color/primary"
