--- a/app/src/main/res/layout/frg_default_product.xml
+++ b/app/src/main/res/layout/frg_default_product.xml
@@ -4,57 +4,130 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="product"
             type="com.xereon.xereon.data.model.Product" />
-        <variable name="isLoading" type="Boolean" />
+
+        <variable
+            name="isLoading"
+            type="boolean" />
+
+        <variable
+            name="isSuccessful"
+            type="boolean" />
     </data>
 
-    <androidx.coordinatorlayout.widget.CoordinatorLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
+        <ImageView
+            android:id="@+id/store_not_found_img"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/img_undraw_waiting"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.4"
+            app:show="@{!isSuccessful}"
+            app:show2="@{!isLoading}" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:fontFamily="@font/roboto_bold"
+            android:text="Produkt nicht gefunden"
+            android:textColor="@color/error"
+            android:textSize="18sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/store_not_found_img"
+            app:show="@{!isSuccessful}"
+            app:show2="@{!isLoading}" />
+
+        <TextView
+            android:id="@+id/store_not_found_descr"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="44dp"
+            android:fontFamily="@font/roboto"
+            android:text="Überprüfen Sie Ihre Verbindung und versuchen Sie es später erneut.\nDieses Produkt könnte auch vom Betreiber entfernt worden sein."
+            android:textAlignment="center"
+            android:textColor="@color/text_gray"
+            android:textSize="14sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/store_not_found_img"
+            app:layout_constraintWidth_max="310dp"
+            app:show="@{!isSuccessful}"
+            app:show2="@{!isLoading}" />
+
+        <Button
+            android:id="@+id/store_not_found_retry"
+            android:layout_width="130dp"
+            android:layout_height="43dp"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/button"
+            android:text="Wiederholen"
+            android:textAllCaps="false"
+            android:textColor="@color/white"
+            android:textSize="16sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/store_not_found_descr"
+            app:show="@{!isSuccessful}"
+            app:show2="@{!isLoading}" />
 
         <ProgressBar
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
+            android:indeterminateTint="@color/primary"
             app:isVisible="@{isLoading}"
-            android:indeterminateTint="@color/primary"/>
-
-        <ImageView
-            android:id="@+id/product_img"
-            android:layout_width="match_parent"
-            android:layout_height="210dp"
-            app:imageURL="@{product.productImageURL}"
-            app:isVisible="@{!isLoading}"
-            android:background="@color/gray_2"
-            android:scaleType="centerCrop" />
-
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:backgroundTint="@color/primary"
-            android:src="@drawable/ic_add_shopping_cart"
-            android:tint="@color/white"
-            app:isVisible="@{!isLoading}"
-            app:borderWidth="0dp"
-            app:layout_anchor="@id/product_scroll_child"
-            app:layout_anchorGravity="end" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.core.widget.NestedScrollView
+            tools:visibility="gone"
             android:id="@+id/product_scroll_parent"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:isVisible="@{!isLoading}"
-            android:clipToPadding="false"
-            android:paddingTop="210dp">
+            app:show="@{!isLoading}"
+            app:show2="@{isSuccessful}">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/product_scroll_child"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/white">
+
+                <ImageView
+                    android:id="@+id/product_img"
+                    android:layout_width="match_parent"
+                    android:layout_height="210dp"
+                    android:background="@color/gray_2"
+                    android:scaleType="centerCrop"
+                    app:imageURL="@{product.productImageURL}"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <com.google.android.material.floatingactionbutton.FloatingActionButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="16dp"
+                    android:backgroundTint="@color/primary"
+                    android:src="@drawable/ic_add_shopping_cart"
+                    android:tint="@color/white"
+                    app:borderWidth="0dp"
+                    app:layout_constraintBottom_toBottomOf="@id/product_img"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/product_img" />
 
                 <TextView
                     android:id="@+id/product_name"
@@ -71,7 +144,7 @@
                     android:textSize="22sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/product_img"
                     tools:text="Kühlschrank mit integriertem Monitor und Magnetwand" />
 
                 <TextView
@@ -84,12 +157,12 @@
                     android:fontFamily="@font/roboto_bold"
                     android:gravity="center_vertical"
                     android:lines="1"
-                    app:price="@{product.price}"
-                    app:unit="@{product.unit}"
                     android:textColor="@color/primary"
                     android:textSize="13sp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/product_name"
+                    app:price="@{product.price}"
+                    app:unit="@{product.unit}"
                     tools:text="16.05€ / 10 Stück" />
 
                 <TextView
@@ -104,10 +177,10 @@
                     android:paddingEnd="16dp"
                     android:paddingBottom="3dp"
                     android:text="Nur in der App"
-                    app:isVisible="@{product.appoffer}"
                     android:textColor="@color/white"
                     android:textSize="13sp"
                     android:visibility="gone"
+                    app:isVisible="@{product.appoffer}"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/product_price"
                     tools:visibility="visible" />
@@ -136,7 +209,7 @@
                     android:layout_marginEnd="16dp"
                     android:ellipsize="end"
                     android:fontFamily="@font/roboto"
-                    android:maxLines="12"
+                    android:maxLines="20"
                     android:minLines="2"
                     android:text="@{product.description}"
                     android:textColor="@color/text_gray"
@@ -174,9 +247,9 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
                     android:fontFamily="@font/roboto"
+                    android:text="@{String.valueOf(product.unit)}"
                     android:textColor="@color/black"
                     android:textSize="14sp"
-                    android:text="@{String.valueOf(product.unit)}"
                     app:layout_constraintBottom_toBottomOf="@id/product_number_picker"
                     app:layout_constraintEnd_toStartOf="@id/product_order_price"
                     app:layout_constraintStart_toEndOf="@id/product_number_picker"
@@ -254,9 +327,9 @@
                         android:layout_marginEnd="16dp"
                         android:fontFamily="@font/roboto_bold"
                         android:maxLines="2"
+                        android:text="@{product.storeName}"
                         android:textColor="@color/white"
                         android:textSize="28sp"
-                        android:text="@{product.storeName}"
                         tools:text="Store name" />
 
                 </RelativeLayout>
@@ -320,6 +393,6 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.core.widget.NestedScrollView>
 
-    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
