--- a/app/src/main/res/layout/incl_opening_hours.xml
+++ b/app/src/main/res/layout/incl_opening_hours.xml
@@ -1,192 +1,236 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:stretchColumns="*">
+<layout xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <TableRow
+    <data>
+
+        <variable
+            name="opening"
+            type="String[]" />
+
+        <variable
+            name="currentDay"
+            type="int" />
+    </data>
+
+    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/gray_1"
-        android:paddingStart="8dp"
-        android:paddingEnd="8dp">
+        android:stretchColumns="*"
+        tools:background="@color/white">
 
-        <TextView
-            android:id="@+id/store_opening_monday"
-            android:layout_width="wrap_content"
+        <TableRow
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Montag"
-            android:textAlignment="textStart"
-            android:textColor="@color/text_gray"
-            android:textSize="14sp" />
+            android:paddingStart="8dp"
+            android:paddingTop="5dp"
+            android:paddingEnd="8dp">
 
-        <TextView
-            android:id="@+id/store_opening_monday_time"
-            android:layout_width="wrap_content"
+            <TextView
+                android:id="@+id/store_opening_monday"
+                android:layout_width="wrap_content"
+                android:layout_height="22dp"
+                android:fontFamily="@font/roboto"
+                android:text="Montag"
+                android:textColor="@color/black"
+                android:textSize="14sp"
+                app:isCurrentDay="@{currentDay == 2}" />
+
+            <TextView
+                android:id="@+id/store_opening_monday_time"
+                android:layout_width="wrap_content"
+                android:layout_height="22dp"
+                android:layout_marginEnd="16dp"
+                android:text="@{opening[0]}"
+                android:textAlignment="textEnd"
+                android:textColor="@color/text_gray"
+                android:textSize="13sp"
+                app:isCurrentDay="@{currentDay == 2}"
+                tools:text="18:00-22:00" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
-            android:textAlignment="textEnd"
-            android:textColor="@color/text_gray"
-            android:textSize="13sp" />
-    </TableRow>
+            android:background="@color/gray_0"
+            android:paddingStart="8dp"
+            android:paddingTop="5dp"
+            android:paddingEnd="8dp">
 
-    <TableRow
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingStart="8dp"
-        android:paddingTop="5dp"
-        android:paddingEnd="8dp">
+            <TextView
+                android:id="@+id/store_opening_tuesday"
+                android:layout_width="wrap_content"
+                android:layout_height="22dp"
+                android:fontFamily="@font/roboto"
+                android:text="Dienstag"
+                android:textColor="@color/black"
+                android:textSize="14sp"
+                app:isCurrentDay="@{currentDay == 3}" />
 
-        <TextView
-            android:id="@+id/store_opening_tuesday"
-            android:layout_width="wrap_content"
+            <TextView
+                android:id="@+id/store_opening_tuesday_time"
+                android:layout_width="wrap_content"
+                android:layout_height="22dp"
+                android:layout_marginEnd="16dp"
+                android:text="@{opening[1]}"
+                android:textAlignment="textEnd"
+                android:textColor="@color/text_gray"
+                android:textSize="13sp"
+                app:isCurrentDay="@{currentDay == 3}"
+                tools:text="18:00-22:00" />
+
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Dienstag"
-            android:textAlignment="textStart"
-            android:textColor="@color/text_gray"
-            android:textSize="14sp" />
+            android:paddingStart="8dp"
+            android:paddingTop="5dp"
+            android:paddingEnd="8dp">
 
-        <TextView
-            android:id="@+id/store_opening_tuesday_time"
-            android:layout_width="wrap_content"
+            <TextView
+                android:id="@+id/store_opening_wednesday"
+                android:layout_width="wrap_content"
+                android:layout_height="22dp"
+                android:fontFamily="@font/roboto"
+                android:text="Mittwoch"
+                android:textColor="@color/black"
+                android:textSize="14sp"
+                app:isCurrentDay="@{currentDay == 4}" />
+
+            <TextView
+                android:id="@+id/store_opening_wednesday_time"
+                android:layout_width="wrap_content"
+                android:layout_height="22dp"
+                android:layout_marginEnd="16dp"
+                android:text="@{opening[2]}"
+                android:textAlignment="textEnd"
+                android:textColor="@color/text_gray"
+                android:textSize="13sp"
+                app:isCurrentDay="@{currentDay == 4}"
+                tools:text="18:00-22:00" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
-            android:textAlignment="textEnd"
-            android:textColor="@color/text_gray"
-            android:textSize="13sp" />
+            android:background="@color/gray_0"
+            android:paddingStart="8dp"
+            android:paddingTop="5dp"
+            android:paddingEnd="8dp">
 
-    </TableRow>
+            <TextView
+                android:id="@+id/store_opening_thursday"
+                android:layout_width="wrap_content"
+                android:layout_height="22dp"
+                android:fontFamily="@font/roboto"
+                android:text="Donnerstag"
+                android:textColor="@color/black"
+                android:textSize="14sp"
+                app:isCurrentDay="@{currentDay == 5}" />
 
-    <TableRow
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/gray_1"
-        android:paddingStart="8dp"
-        android:paddingTop="5dp"
-        android:paddingEnd="8dp">
+            <TextView
+                android:id="@+id/store_opening_thursday_time"
+                android:layout_width="wrap_content"
+                android:layout_height="22dp"
+                android:layout_marginEnd="16dp"
+                android:text="@{opening[3]}"
+                android:textAlignment="textEnd"
+                android:textColor="@color/text_gray"
+                android:textSize="13sp"
+                app:isCurrentDay="@{currentDay == 5}"
+                tools:text="18:00-22:00" />
+        </TableRow>
 
-        <TextView
-            android:id="@+id/store_opening_wednesday"
-            android:layout_width="wrap_content"
+        <TableRow
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Mittwoch"
-            android:textAlignment="textStart"
-            android:textColor="@color/text_gray"
-            android:textSize="14sp" />
+            android:paddingStart="8dp"
+            android:paddingTop="5dp"
+            android:paddingEnd="8dp">
 
-        <TextView
-            android:id="@+id/store_opening_wednesday_time"
-            android:layout_width="wrap_content"
+            <TextView
+                android:id="@+id/store_opening_friday"
+                android:layout_width="wrap_content"
+                android:layout_height="22dp"
+                android:fontFamily="@font/roboto"
+                android:text="Freitag"
+                android:textColor="@color/black"
+                android:textSize="14sp"
+                app:isCurrentDay="@{currentDay == 6}" />
+
+            <TextView
+                android:id="@+id/store_opening_friday_time"
+                android:layout_width="wrap_content"
+                android:layout_height="22dp"
+                android:layout_marginEnd="16dp"
+                android:text="@{opening[4]}"
+                android:textAlignment="textEnd"
+                android:textColor="@color/text_gray"
+                android:textSize="13sp"
+                app:isCurrentDay="@{currentDay == 6}"
+                tools:text="18:00-22:00" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
-            android:textAlignment="textEnd"
-            android:textColor="@color/text_gray"
-            android:textSize="13sp" />
-    </TableRow>
+            android:background="@color/gray_0"
+            android:paddingStart="8dp"
+            android:paddingTop="5dp"
+            android:paddingEnd="8dp">
 
-    <TableRow
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingStart="8dp"
-        android:paddingTop="5dp"
-        android:paddingEnd="8dp">
+            <TextView
+                android:id="@+id/store_opening_saturday"
+                android:layout_width="wrap_content"
+                android:layout_height="22dp"
+                android:fontFamily="@font/roboto"
+                android:text="Samstag"
+                android:textColor="@color/black"
+                android:textSize="14sp"
+                app:isCurrentDay="@{currentDay == 7}" />
 
-        <TextView
-            android:id="@+id/store_opening_thursday"
-            android:layout_width="wrap_content"
+            <TextView
+                android:id="@+id/store_opening_saturday_time"
+                android:layout_width="wrap_content"
+                android:layout_height="22dp"
+                android:layout_marginEnd="16dp"
+                android:text="@{opening[5]}"
+                android:textAlignment="textEnd"
+                android:textColor="@color/text_gray"
+                android:textSize="13sp"
+                app:isCurrentDay="@{currentDay == 7}"
+                tools:text="18:00-22:00" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Donnerstag"
-            android:textAlignment="textStart"
-            android:textColor="@color/text_gray"
-            android:textSize="14sp" />
+            android:paddingStart="8dp"
+            android:paddingTop="5dp"
+            android:paddingEnd="8dp">
 
-        <TextView
-            android:id="@+id/store_opening_thursday_time"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
-            android:textAlignment="textEnd"
-            android:textColor="@color/text_gray"
-            android:textSize="13sp" />
-    </TableRow>
+            <TextView
+                android:id="@+id/store_opening_sunday"
+                android:layout_width="wrap_content"
+                android:layout_height="22dp"
+                android:fontFamily="@font/roboto"
+                android:text="Sonntag"
+                android:textColor="@color/black"
+                android:textSize="14sp"
+                app:isCurrentDay="@{currentDay == 1}" />
 
-    <TableRow
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/gray_1"
-        android:paddingStart="8dp"
-        android:paddingTop="5dp"
-        android:paddingEnd="8dp">
-
-        <TextView
-            android:id="@+id/store_opening_friday"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Freitag"
-            android:textAlignment="textStart"
-            android:textColor="@color/text_gray"
-            android:textSize="14sp" />
-
-        <TextView
-            android:id="@+id/store_opening_friday_time"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
-            android:textAlignment="textEnd"
-            android:textColor="@color/text_gray"
-            android:textSize="13sp" />
-    </TableRow>
-
-    <TableRow
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingStart="8dp"
-        android:paddingTop="5dp"
-        android:paddingEnd="8dp">
-
-        <TextView
-            android:id="@+id/store_opening_saturday"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Samstag"
-            android:textAlignment="textStart"
-            android:textColor="@color/text_gray"
-            android:textSize="14sp" />
-
-        <TextView
-            android:id="@+id/store_opening_saturday_time"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
-            android:textAlignment="textEnd"
-            android:textColor="@color/text_gray"
-            android:textSize="13sp" />
-    </TableRow>
-
-    <TableRow
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/gray_1"
-        android:paddingStart="8dp"
-        android:paddingTop="5dp"
-        android:paddingEnd="8dp">
-
-        <TextView
-            android:id="@+id/store_opening_sunday"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Sonntag"
-            android:textAlignment="textStart"
-            android:textColor="@color/text_gray"
-            android:textSize="14sp" />
-
-        <TextView
-            android:id="@+id/store_opening_sunday_time"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
-            android:textAlignment="textEnd"
-            android:textColor="@color/text_gray"
-            android:textSize="13sp" />
-    </TableRow>
-</TableLayout>
+            <TextView
+                android:id="@+id/store_opening_sunday_time"
+                android:layout_width="wrap_content"
+                android:layout_height="22dp"
+                android:layout_marginEnd="16dp"
+                android:text="@{opening[6]}"
+                android:textAlignment="textEnd"
+                android:textColor="@color/text_gray"
+                android:textSize="13sp"
+                app:isCurrentDay="@{currentDay == 1}"
+                tools:text="geschlossen" />
+        </TableRow>
+    </TableLayout>
+</layout>
